// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options autoOk false 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options autoOk true 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options disableFuture false 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options disableFuture true 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options disablePast false 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options disablePast true 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-error css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="true"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options format LLLL 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options format YYYY/MM/DD HH:mm:ss 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options fullWidth false 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options fullWidth true 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options openTo datetime 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options openTo month 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options openTo year 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options readonly false 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options readonly true 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary Mui-disabled css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input Mui-disabled css-1x51dt5-MuiInputBase-input-MuiInput-input"
      disabled=""
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options variant dialog 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;

exports[`renders with form options variant inline 1`] = `
<div>
  <div
    class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-1tcs2i1-MuiInputBase-root-MuiInput-root"
  >
    <input
      aria-invalid="false"
      aria-label="Choose date, selected date is Jan 1, 1970"
      aria-readonly="true"
      class="MuiInput-input MuiInputBase-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
      readonly=""
      type="text"
      value="01/01/1970 12:00 AM"
    />
  </div>
</div>
`;
